--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=3000
-DB_URL=127.0.0.1
-JWT_SECRET=secret
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=password
+DB_NAME=databasename
