--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-PORT=3000
+APP_NAME=Payment BE
+WEB_PORT=8080
+WEB_PREFORK=false
 
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=databasename
+DB_NAME=payment_db
+DB_POOL_IDLE=5
+DB_POOL_MAX=10
+DB_POOL_LIFETIME=300
